fix(index, assets): fix contrast of photos

--- a/css/boxy-view-style.css
+++ b/css/boxy-view-style.css
@@ -288,10 +288,6 @@ li {
     display: none;
 }
 
-.contrast {
-    filter: contrast(2.0);
-}
-
 #list_limited li:nth-of-type(1n+6) {
     display: none;
 }
